color de fuente

--- a/scss/pages/_contactos.scss
+++ b/scss/pages/_contactos.scss
@@ -25,7 +25,7 @@
         font-size: 13px;
         text-align: center;             
         padding: 10px;
-        color: aqua;    
+        color: black;    
     }
     div{
         .mapa{
@@ -71,7 +71,7 @@
         font-size: 25px;
         text-align: center;             
         padding: 20px;
-        color: aqua;    
+        color: black;    
     }
     div{
         .mapa{
