--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -40,7 +40,7 @@ section {
         width: 100%;
         font-size: 9px;
         padding: 10px;
-        color: aqua;             
+        color: black;             
         }
     .p2 {
         width: 30%;
@@ -48,7 +48,7 @@ section {
         width: 100%;
         font-size: 9px;
         padding: 10px;
-        color: aqua;
+        color:  black;
         }
 }
 
@@ -99,7 +99,7 @@ section {
         .p1 {
             max-width: 75%;
             height: 360px;
-            color: aqua;
+            color: black;
             font-size: 20px;
             font-weight: bold;
             padding: 20px;                
@@ -107,7 +107,7 @@ section {
         .p2 {
             max-width: 75%;
             height: 360px;
-            color: aqua;
+            color: black;
             font-size: 20px;
             font-weight: bold;
             padding: 20px;  
