--- a/scss/pages/_menu.scss
+++ b/scss/pages/_menu.scss
@@ -37,7 +37,7 @@
         font-size: 11px;
         text-align: center;             
         padding: 10px;
-        color: aqua;
+        color: black;
         }
     .p4 {
         width: 30%;
@@ -46,7 +46,7 @@
         font-size: 11px;
         text-align: center; 
         padding: 10px;
-        color: aqua;
+        color: black;
         }
     .p5 {
         width: 30%;
@@ -55,7 +55,7 @@
         font-size: 11px;
         text-align: center; 
         padding: 10px;
-        color: aqua;             
+        color: black;             
         }
     .p6 {
         width: 30%;
@@ -64,7 +64,7 @@
         font-size: 11px;
         text-align: center; 
         padding: 10px;
-        color: aqua;
+        color: black;
         }
 }
 
@@ -123,7 +123,7 @@
         .p3 {
             max-width: 75%;
             height: 360px;
-            color: aqua;
+            color: black;
             font-size: 22px;
             text-align: center;
             font-weight: bold;
@@ -132,7 +132,7 @@
         .p4 {
             max-width: 75%;
             height: 360px;
-            color: aqua;
+            color: black;
             font-size: 22px;
             text-align: center;
             font-weight: bold;
@@ -141,7 +141,7 @@
         .p5 {
             max-width: 75%;
             height: 360px;
-            color: aqua;
+            color: black;
             font-size: 22px;
             text-align: center;
             font-weight: bold;
@@ -150,7 +150,7 @@
         .p6 {
             max-width: 75%;
             height: 360px;
-            color: aqua;
+            color: black;
             font-size: 22px;
             text-align: center;
             font-weight: bold;
