--- a/scss/pages/_nosotros.scss
+++ b/scss/pages/_nosotros.scss
@@ -10,7 +10,7 @@
     height: auto;
     padding: 20px;
     border-radius: 15px;
-    background-color: violet ;
+    background-color: #EEA5A6 ;
     display: $diplay;
     grid-template-columns: repeat(2,  40px );
     grid-template-rows: repeat(4,  200px);
@@ -66,11 +66,11 @@
     border-radius: 15px;
     border: 2px solid black;
     width: 30%;
-    height: 700px;
+    height: 1500px;
     width: 100%;
-    font-size: 11px;
+    font-size: 16px;
     padding: 10px;
-    color: aqua; 
+    color: black; 
 }
 
 @media only screen and (min-width: 1024px) {
@@ -97,7 +97,7 @@
         height: auto;
         padding: 20px;
         border-radius: 15px;
-        background-color: violet ;
+        background-color: #EEA5A6 ;
         display: $diplay;
         grid-template-columns: repeat(4,  1fr);
         grid-template-rows: repeat(3,  200px);
