--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -21,14 +21,14 @@ section {
        
     }
     .img1 {
-        background-image: url(../../img/budindelimon.jpg);
+        background-image: url(../../img/budindelimon.webp);
         background-size: cover;
         height: 300px;
         width: 100%;
         align-items: center;
     }
     .img2 {
-        background-image: url(../../img/macarron.png.jpg);
+        background-image: url(../../img/macarron.webp);
         background-size: cover;
         height: 300px;
         width: 100%;
@@ -84,13 +84,13 @@ section {
             border-radius: 10px;
         }
         .img1 {
-            background-image: url(../../img/budindelimon.jpg);
+            background-image: url(../../img/budindelimon.webp);
             max-width: 75%;
             margin-left: 170px;
             height: 360px;
         }
         .img2 {
-            background-image: url(../../img/macarron.png.jpg);
+            background-image: url(../../img/macarron.webp);
             max-width: 75%;
             margin-left: 170px;
             height: 360px;
