--- a/scss/pages/_menu.scss
+++ b/scss/pages/_menu.scss
@@ -15,19 +15,19 @@
         justify-content: space-between;
     }
     .img3 {
-        background-image: url(../../img/mousse\ de\ chocolate.jpg);
+        background-image: url(../../img/mousse\ de\ chocolate.webp);
         @extend %menuImg320;
     }
     .img4 {
-        background-image: url(../../img/flan\ vegano.jpg);
+        background-image: url(../../img/flan\ vegano.webp);
         @extend %menuImg320;
     }
     .img5 {
-        background-image: url(../../img/cheesecakede\ arandanos.jpg);
+        background-image: url(../../img/cheesecakede\ arandanos.webp);
         @extend %menuImg320;
     }
     .img6 {
-        background-image: url(../../img/hojaldre.jpg);
+        background-image: url(../../img/hojaldre.webp);
         @extend %menuImg320;
     }
     .p3 {
@@ -97,25 +97,25 @@
             justify-content: space-between;
         }
         .img3 {
-            background-image: url(../../img/mousse\ de\ chocolate.jpg);
+            background-image: url(../../img/mousse\ de\ chocolate.webp);
             max-width: 75%;
             margin-left: 170px;
             height: 360px;
         }
         .img4 {
-            background-image: url(../../img/flan\ vegano.jpg);
+            background-image: url(../../img/flan\ vegano.webp);
             max-width: 75%;
             margin-left: 170px;
             height: 360px;
         }
         .img5 {
-            background-image: url(../../img/cheesecakede\ arandanos.jpg);
+            background-image: url(../../img/cheesecakede\ arandanos.webp);
             max-width: 75%;
             margin-left: 170px;
             height: 360px;
         }
         .img6 {
-            background-image: url(../../img/hojaldre.jpg);
+            background-image: url(../../img/hojaldre.webp);
             max-width: 75%;
             margin-left: 170px;
             height: 360px;
