--- a/scss/pages/_nosotros.scss
+++ b/scss/pages/_nosotros.scss
@@ -30,35 +30,35 @@
     
     .item1{
         grid-area: img1;
-        background-image: url(../../img/budindelimon.jpg);
+        background-image: url(../../img/budindelimon.webp);
     }
     .item2{
         grid-area: img2;
-        background-image: url(../../img/cheesecakede\ arandanos.jpg);
+        background-image: url(../../img/cheesecakede\ arandanos.webp);
     }
     .item3{
         grid-area: img3;
-        background-image: url(../../img/flan\ vegano.jpg);
+        background-image: url(../../img/flan\ vegano.webp);
     }
     .item4{
         grid-area: img4;
-        background-image: url(../../img/macarron.png.jpg);
+        background-image: url(../../img/macarron.webp);
     }
     .item5{
         grid-area: img5;
-        background-image: url(../../img/quiche\ higos.jpg);
+        background-image: url(../../img/quiche\ higos.webp);
     }
     .item6{
         grid-area: img6;
-        background-image: url(../../img/sable\ de\ cardamomo.jpg);
+        background-image: url(../../img/sable\ de\ cardamomo.webp);
     }
     .item7{
         grid-area: img7;
-        background-image: url(../../img/semi\ esfera\ de\ chocolate.jpg);
+        background-image: url(../../img/semi\ esfera\ de\ chocolate.webp);
     }
     .item8{
         grid-area: img8;
-        background-image: url(../../img/hojaldre.jpg);
+        background-image: url(../../img/hojaldre.webp);
     }
 }
 .p7{
@@ -116,35 +116,35 @@
         
         .item1{
             grid-area: img1;
-            background-image: url(../../img/budindelimon.jpg);
+            background-image: url(../../img/budindelimon.webp);
         }
         .item2{
             grid-area: img2;
-            background-image: url(../../img/cheesecakede\ arandanos.jpg);
+            background-image: url(../../img/cheesecakede\ arandanos.webp);
         }
         .item3{
             grid-area: img3;
-            background-image: url(../../img/flan\ vegano.jpg);
+            background-image: url(../../img/flan\ vegano.webp);
         }
         .item4{
             grid-area: img4;
-            background-image: url(../../img/macarron.png.jpg);
+            background-image: url(../../img/macarron.webp);
         }
         .item5{
             grid-area: img5;
-            background-image: url(../../img/quiche\ higos.jpg);
+            background-image: url(../../img/quiche\ higos.webp);
         }
         .item6{
             grid-area: img6;
-            background-image: url(../../img/sable\ de\ cardamomo.jpg);
+            background-image: url(../../img/sable\ de\ cardamomo.webp);
         }
         .item7{
             grid-area: img7;
-            background-image: url(../../img/semi\ esfera\ de\ chocolate.jpg);
+            background-image: url(../../img/semi\ esfera\ de\ chocolate.webp);
         }
         .item8{
             grid-area: img8;
-            background-image: url(../../img/hojaldre.jpg);
+            background-image: url(../../img/hojaldre.webp);
         }
     }
     .p7{
