--- a/scss/pages/_menu.scss
+++ b/scss/pages/_menu.scss
@@ -4,69 +4,106 @@
         @extend %hov;
     }    
 }
-.contenido2 {
-    @extend %menus;
-    grid-template-columns: repeat(1, 1fr);
-    grid-template-rows: repeat(8, 1fr );
-    padding: 20px;
-    grid-gap: 10px;  
-    .menu1 {
-        @extend %menus1;
-        justify-content: space-between;
-    }
-    .img3 {
-        background-image: url(../../img/mousse\ de\ chocolate.webp);
-        @extend %menuImg320;
-    }
-    .img4 {
-        background-image: url(../../img/flan\ vegano.webp);
-        @extend %menuImg320;
-    }
-    .img5 {
-        background-image: url(../../img/cheesecakede\ arandanos.webp);
-        @extend %menuImg320;
-    }
-    .img6 {
-        background-image: url(../../img/hojaldre.webp);
-        @extend %menuImg320;
-    }
-    .p3 {
-        width: 30%;
-        height: $altura;
-        width: 100%;
-        font-size: 16px;
-        text-align: center;             
-        padding: 10px;
-        color: black;
-        }
-    .p4 {
-        width: 30%;
-        height: $altura;
-        width: 100%;
-        font-size: 16px;
-        text-align: center; 
-        padding: 10px;
-        color: black;
-        }
-    .p5 {
-        width: 30%;
-        height: $altura;
-        width: 100%;
-        font-size: 16px;
-        text-align: center; 
-        padding: 10px;
-        color: black;             
-        }
-    .p6 {
-        width: 30%;
-        height: $altura;
-        width: 100%;
-        font-size: 16px;
-        text-align: center; 
-        padding: 10px;
-        color: black;
-        }
+.menu{
+    font-size: 50px;
+    font-weight: bold;
+    background-color: white;
+    height: 150px;
+    width: 100%;
+    background-image: url(../../img/Logo\ Mailin\ Sweets\ -\ Original\ OFF.png);
+    background-size: contain;
+    background-position: center;
+    text-align: center;
+    padding: 50px;
+    border-radius: 10px;
+    &:hover{
+        @extend %hov;
+    }   
 }
+.contenido2 {
+display: flex;
+.img3{
+    border: 1px solid black;
+    background-position: center;
+    background-size: cover;
+    background-color: white;
+    border-radius: 10px;
+    margin: 10px;
+    background-image: url(../../img/mousse\ de\ chocolate.webp);
+}
+.img4{
+    border: 1px solid black;
+    background-position: center;
+    background-size: cover;
+    background-color: white;
+    border-radius: 10px;
+    margin: 10px;
+    background-image: url(../../img/flan\ vegano.webp);
+}
+.img5{
+    border: 1px solid black;
+    background-position: center;
+    background-size: cover;
+    background-color: white;
+    border-radius: 10px;
+    margin: 10px;
+    background-image: url(../../img/cheesecakede\ arandanos.webp);
+    height: 330px;
+}
+.img6{
+    border: 1px solid black;
+    background-position: center;
+    background-size: cover;
+    background-color: white;
+    border-radius: 10px;
+    margin: 10px;
+    background-image: url(../../img/hojaldre.webp);
+    height: 330px;
+}
+.p3{
+    border: 1px solid black;
+    background-position: center;
+    background-size: cover;
+    background-color: white;
+    border-radius: 10px;
+    margin: 10px;
+    height: 330px;
+    font-size: 10px;
+}
+.p4{
+    border: 1px solid black;
+    background-position: center;
+    background-size: cover;
+    background-color: white;
+    border-radius: 10px;
+    margin: 10px;
+    height: 330px;
+    font-size: 10px;
+}
+.p5{
+    border: 1px solid black;
+    background-position: center;
+    background-size: cover;
+    background-color: white;
+    border-radius: 10px;
+    margin: 10px;
+    height: 340px;
+    font-size: 10px; 
+}
+.p6{
+    border: 1px solid black;
+    background-position: center;
+    background-size: cover;
+    background-color: white;
+    border-radius: 10px;
+    margin: 10px;
+    height: 340px;
+    font-size: 10px;
+}
+}
+
+
+
 
 @media only screen and (min-width: 1024px) {
 
@@ -87,74 +124,102 @@
         }   
     }
     .contenido2 {
-        @extend %menus;
-        grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: repeat(4, 1fr );
-        margin-top: 75px;
-        grid-gap: 20px;
-        .menu1 {
-            @extend %menus1;
-            justify-content: space-between;
-        }
-        .img3 {
-            background-image: url(../../img/mousse\ de\ chocolate.webp);
-            max-width: 75%;
-            margin-left: 170px;
-            height: 360px;
-        }
-        .img4 {
-            background-image: url(../../img/flan\ vegano.webp);
-            max-width: 75%;
-            margin-left: 170px;
-            height: 360px;
-        }
-        .img5 {
-            background-image: url(../../img/cheesecakede\ arandanos.webp);
-            max-width: 75%;
-            margin-left: 170px;
-            height: 360px;
-        }
-        .img6 {
-            background-image: url(../../img/hojaldre.webp);
-            max-width: 75%;
-            margin-left: 170px;
-            height: 360px;
-        }
-        .p3 {
-            max-width: 75%;
-            height: 360px;
-            color: black;
-            font-size: 22px;
-            text-align: center;
-            font-weight: bold;
-            padding: 20px;               
-        }
-        .p4 {
-            max-width: 75%;
-            height: 360px;
-            color: black;
-            font-size: 22px;
-            text-align: center;
-            font-weight: bold;
-            padding: 20px;   
-        }
-        .p5 {
-            max-width: 75%;
-            height: 360px;
-            color: black;
-            font-size: 22px;
-            text-align: center;
-            font-weight: bold;
-            padding: 20px;               
-        }
-        .p6 {
-            max-width: 75%;
-            height: 360px;
-            color: black;
-            font-size: 22px;
-            text-align: center;
-            font-weight: bold;
-            padding: 20px;  
-        }
+    display: flex;
+    .img3{
+        border: 1px solid black;
+        background-position: center;
+        background-size: cover;
+        background-color: white;
+        border-radius: 10px;
+        margin: 10px;
+        background-size: cover;
+        background-position: center;
+        background-image: url(../../img/mousse\ de\ chocolate.webp);
+        max-width: 75%;
+        height: auto;
     }
+    .img4{
+        border: 1px solid black;
+        background-position: center;
+        background-size: cover;
+        background-color: white;
+        border-radius: 10px;
+        margin: 10px;
+        background-size: cover;
+        background-position: center;
+        background-image: url(../../img/flan\ vegano.webp);
+        max-width: 75%;
+        height: auto;
+    }
+    .img5{
+        border: 1px solid black;
+        background-position: center;
+        background-size: cover;
+        background-color: white;
+        border-radius: 10px;
+        margin: 10px;
+        background-size: cover;
+        background-position: center;
+        background-image: url(../../img/cheesecakede\ arandanos.webp);
+        max-width: 75%;
+        height: auto;
+    }
+    .img6{
+        border: 1px solid black;
+        background-position: center;
+        background-size: cover;
+        background-color: white;
+        border-radius: 10px;
+        margin: 10px;
+        background-size: cover;
+        background-position: center;
+        background-image: url(../../img/hojaldre.webp);
+        max-width: 75%;
+        height: auto;
+    }
+    .p3{
+        border: 1px solid black;
+        background-position: center;
+        background-size: cover;
+        background-color: white;
+        border-radius: 10px;
+        margin: 10px;
+        height: auto;
+        font-size: 20px;
+        text-align: justify;
+    }
+    .p4{
+        border: 1px solid black;
+        background-position: center;
+        background-size: cover;
+        background-color: white;
+        border-radius: 10px;
+        margin: 10px;
+        height: auto;
+        font-size: 20px; 
+        text-align: justify; 
+    }
+    .p5{
+        border: 1px solid black;
+        background-position: center;
+        background-size: cover;
+        background-color: white;
+        border-radius: 10px;
+        margin: 10px;
+        height: auto;
+        font-size: 20px;
+        text-align: justify; 
+    }
+    .p6{
+        border: 1px solid black;
+        background-position: center;
+        background-size: cover;
+        background-color: white;
+        border-radius: 10px;
+        margin: 10px;
+        height: auto;
+        font-size: 20px;
+        text-align: justify; 
+    }
+}
 }
